# pvc

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
pvc/: task.py  test_utils.py
tests/: generate.py
tests/resources/source1/: raw1.csv  raw2.csv  raw3.csv
tests/unit/: conftest.py  test_core.py
