[tool.poetry]
name = "pvc"
version = "0.1.0"
description = ""
authors = ["Bradley McElroy <bradley.mcelroy@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^2.9.4"
prefect = "==2.0a9"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
